--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
 /public_html/vendor
 /public_html/logs
 /public_html/.env
+/public_html/composer.json
+/public_html/src/Core/Config/config.php
 .idea
