--- a/public_html/composer.json
+++ b/public_html/composer.json
@@ -7,7 +7,9 @@
     "opis/database": "^4.2",
     "tightenco/collect": "^8.19",
     "mark-gerarts/auto-mapper-plus": "2.0.x-dev",
-    "samdark/hydrator": "^1.0"
+    "samdark/hydrator": "^1.0",
+    "davedevelopment/phpmig": "^1.7",
+    "jawira/case-converter": "^3.4"
   },
   "autoload": {
     "psr-4": {
