--- a/public_html/composer.json
+++ b/public_html/composer.json
@@ -9,7 +9,8 @@
     "mark-gerarts/auto-mapper-plus": "2.0.x-dev",
     "samdark/hydrator": "^1.0",
     "davedevelopment/phpmig": "^1.7",
-    "jawira/case-converter": "^3.4"
+    "jawira/case-converter": "^3.4",
+    "romanato/php-coloringo-cli": "^1.0"
   },
   "autoload": {
     "psr-4": {
