Teams and options table. Starting options

--- a/public_html/composer.json
+++ b/public_html/composer.json
@@ -15,6 +15,9 @@
   "autoload": {
     "psr-4": {
       "OSM\\": "src/"
-    }
+    },
+    "files": [
+      "src/Core/Library/functions.php"
+    ]
   }
 }
