--- a/public_html/composer.json
+++ b/public_html/composer.json
@@ -11,7 +11,8 @@
     "davedevelopment/phpmig": "^1.7",
     "jawira/case-converter": "^3.4",
     "romanato/php-coloringo-cli": "^1.0",
-    "nesbot/carbon": "^2.44"
+    "nesbot/carbon": "^2.44",
+    "mnito/round-robin": "^2.0"
   },
   "autoload": {
     "psr-4": {
