--- a/public_html/composer.json
+++ b/public_html/composer.json
@@ -12,7 +12,8 @@
     "jawira/case-converter": "^3.4",
     "romanato/php-coloringo-cli": "^1.0",
     "nesbot/carbon": "^2.44",
-    "mnito/round-robin": "^2.0"
+    "mnito/round-robin": "^2.0",
+    "ext-gettext": "*"
   },
   "autoload": {
     "psr-4": {
