--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,8 @@
 language: php
 php:
   - 7.4
+before_script:
+  - composer self-update
+  - composer install --prefer-source --no-interaction --dev
 script:
-  - punlic_html/vendor/bin/phpunit --testsuite Unit  --stderr -c phpunit.xml
+  - public_html/vendor/bin/phpunit --testsuite Unit  --stderr -c phpunit.xml
