--- a/public_html/package.json
+++ b/public_html/package.json
@@ -2,11 +2,10 @@
   "name": "OSM",
   "version": "1.0.0",
   "description": "",
-  "main": "./dist/app.min.js",
   "scripts": {
-    "dev": "./node_modules/.bin/cross-env NODE_ENV=development webpack",
+    "dev": "cross-env NODE_ENV=development webpack",
     "dev-server": "webpack-dev-server",
-    "build": "./node_modules/.bin/cross-env NODE_ENV=production webpack --progress --hide-modules"
+    "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "keywords": [],
   "author": "",
