migration log added to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 /public_html/vendor
 /public_html/logs
 /public_html/.env
+/public_html/migrations/.migrations.log
 /public_html/node_modules/
 /public_html/public/dist/
 /public_html/src/Core/Config/config-local.php
