--- a/public_html/composer.json
+++ b/public_html/composer.json
@@ -14,7 +14,8 @@
     "romanato/php-coloringo-cli": "^1.0",
     "nesbot/carbon": "^2.44",
     "mnito/round-robin": "^2.0",
-    "league/flysystem": "^2.0"
+    "league/flysystem": "^2.0",
+    "fakerphp/faker": "^1.19"
   },
   "autoload": {
     "psr-4": {
