--- a/public_html/package.json
+++ b/public_html/package.json
@@ -1,48 +1,25 @@
 {
-  "name": "OSM",
+  "name": "osm",
   "version": "1.0.0",
   "description": "",
-  "scripts": {
-    "dev": "cross-env NODE_ENV=development webpack",
-    "dev-server": "webpack-dev-server",
-    "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
+  "main": "webpack.config.js",
+  "directories": {
+    "test": "tests"
   },
-  "keywords": [],
+  "scripts": {
+    "start": "webpack serve --mode development",
+    "build": "webpack --mode production"
+  },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@babel/cli": "^7.7.7",
-    "@babel/core": "^7.7.7",
-    "@babel/preset-env": "^7.7.7",
-    "babel-loader": "^8.0.6",
-    "bootstrap": "^4.4.1",
-    "cross-env": "^7.0.3",
-    "css-loader": "^3.4.0",
-    "exports-loader": "^0.7.0",
-    "imports-loader": "^0.8.0",
-    "mini-css-extract-plugin": "^0.9.0",
-    "node-sass": "^4.13.0",
-    "postcss-loader": "^3.0.0",
-    "resolve-url-loader": "^3.1.1",
-    "sass": "^1.23.0",
-    "sass-loader": "^8.0.0",
-    "style-loader": "^1.1.2",
-    "url-loader": "^3.0.0",
-    "vue": "^2.6.11",
-    "vue-loader": "^15.8.3",
-    "vue-style-loader": "^4.1.2",
-    "vue-template-compiler": "^2.6.11",
-    "webpack": "^4.41.0",
-    "webpack-cli": "^3.3.9"
-  },
-  "dependencies": {
-    "autoprefixer": "^9.7.3",
-    "axios": "^0.21.1",
-    "bootstrap-loader": "^3.0.4",
-    "jquery": "^3.4.1",
-    "lodash": "^4.17.21",
-    "popper.js": "^1.16.0",
-    "precss": "^4.0.0",
-    "vue-mc": "^0.6.0"
+    "@babel/core": "^7.23.9",
+    "@babel/preset-env": "^7.23.9",
+    "babel-loader": "^9.1.3",
+    "html-loader": "^5.0.0",
+    "html-webpack-plugin": "^5.6.0",
+    "webpack": "^5.90.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.1"
   }
 }
