--- a/public_html/package.json
+++ b/public_html/package.json
@@ -7,7 +7,7 @@
     "test": "tests"
   },
   "scripts": {
-    "start": "webpack serve --mode development",
+    "dev": "webpack --watch --mode development",
     "build": "webpack --mode production"
   },
   "author": "",
